--- a/src/Components/Pages/Home/index.scss
+++ b/src/Components/Pages/Home/index.scss
@@ -61,18 +61,6 @@
             
         }
     }
-    .part1{
-        
-        img{
-            width: 200px;
-            height: 200px;
-        }
-        h2{
-            padding-bottom: 6px;
-            border-bottom: 3px solid green;
-            
-        }
-    }
     .part2{
         div{
 
